user.css
:root {
  --border-radius-1: 9px;
  --border-radius-2: 7px;
  --border-radius-3: 7px;
  --glue-font-weight-normal: 400;
  --glue-font-weight-bold: 600;
  --glue-font-weight-black: 700;
  --scrollbars: unset;
  --scrollbar-vertical-size: 6px;
  --filter-brightness: 1;
  --green: #00ffa1;
}

* {
  font-family: 'Segoe UI Variable Display','Segoe UI Variable Text','Segoe UI','Microsoft Ya Hei', sans-serif !important;
  /* font-family: 'Segoe UI Variable Display','Segoe UI Variable Text', 'Microsoft Ya Hei', sans-serif !important; */
  line-height: normal;
  box-shadow: none !important;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  -webkit-mask-size: contain;
}

/* Fix Overflow off Screen */
html {
  max-width: 100vw;
  max-height: 100vh;
  overflow: hidden;
}

.encore-dark-theme .encore-bright-accent-set{
  width: auto;
  --background-highlight: var(--spice-accent);
  --background-press: var(--spice-accent);
}

.Root__main-view {
  z-index: 0;
  background-color: var(--spice-main);
  height: 100%;
}

.os-scrollbar {
  display: var(--scrollbars);
}

.os-scrollbar-handle {
  border-radius: 50px;
  background: var(--spice-subtext) !important;
}

.os-theme-spotify>.os-scrollbar-vertical {
  margin-right: 2px;
}

.os-scrollbar-horizontal {
  display: none;
}

.contentSpacing {
  max-width: 100vw !important;
}

.main-home-homeHeader,
.main-actionBarBackground-background,
.n87ifzfQlmGX8vkeYGDL {
  background-image: none;
}

.main-actionBarBackground-background,
.main-home-homeHeader,
.x-entityHeader-overlay,
.x-actionBarBackground-background,
.n87ifzfQlmGX8vkeYGDL {
  background-color: var(--spice-main) !important;
}

.main-topBar-background,
.main-topBar-overlay {
  background-color: var(--spice-topbar) !important;
  opacity: 1 !important;
}

.main-entityHeader-overlay {
  background-image: linear-gradient(to bottom, rgb(39 39 39 / 0%), var(--spice-main));
}

.x-actionBarBackground-background,
.x-entityHeader-overlay,
.We1fExPHxLIRmV0rZGNo {
  background: none !important;
}


/* remove dividers */

.main-trackList-trackListHeaderRow,
.main-trackCreditsModal-header {
  background-color: var(--spice-card);
  border-bottom: none;
}

.now-playing-bar-container,
._6e96ad0ba78d75ffb2a0156aa1834a21-scss {
  border-top: none;
}

.main-rootlist-rootlistDivider,
.main-contextMenu-dividerBefore::before,
.main-contextMenu-dividerAfter::after,
.show-episodeList-divider,
.main-rootlist-rootlistDividerContainer {
  display: none;
}


/* cards */

.main-shelf-shelfGrid {
  overflow-y: visible !important;
}

.main-cardImage-image,
.main-cardImage-imageWrapper,
.OALAQFKvC7XQOVYpklB4 img {
  border-radius: var(--border-radius-2);
}

.main-card-card,
.x-heroCategoryCard-HeroCategoryCard,
.x-categoryCard-CategoryCard,
.main-heroCard-card,
.OALAQFKvC7XQOVYpklB4,
.g3f_cI5usQX7ZOQyDtA9{
  border-radius: var(--border-radius-1);
}

.Z35BWOA10YGn5uc9YgAp{
  background: transparent;
  overflow: unset;
}

.main-card-card,
.main-heroCard-card,
.x-searchResultsTracks-root>.main-gridContainer-gridContainer,
.main-trackList-indexable,
.view-homeShortcutsGrid-shortcut,
.OALAQFKvC7XQOVYpklB4,
.L4WROPnQ7MPGhylvVyxd,
.g3f_cI5usQX7ZOQyDtA9 {
  background-color: var(--spice-card);
  box-shadow: 0px 4px 4px -4px var(--spice-layer-shadow) !important;
  border: 1px var(--spice-contour) solid;
}

.main-tag-container {
  font-weight: 400;
  font-size: 10px;
  color: #463d3d !important;
}

.main-heroCardTag-root, ._8PRqRiYMqnyy_gN_fUD ._AxyaXOKl3GkvT212Vco {
  height: 24px;
  padding: 12px;
  margin-top: 8px;
}

.ZHE5oMCbrUVXtUWiPmpH { /* tags */
  padding: 12px !important;
}

.x-categoryCard-title,
.x-heroCategoryCard-heroTitle,
.collection-collectionEntityHeroCard-likedSongs div {
  color: var(--spice-alt-text);
}


/* transitions */

.main-card-card {
  transition: background-color 150ms ease;
}

.link-subtle {
  transition-duration: 150ms;
}

/* headers */

.Root__top-bar {
  position: absolute !important;
  width: 100vw !important;
  grid-area: none;
  z-index: 4 !important;
  background: var(--spice-sidebar);
}

.main-topBar-container {
  background: transparent;
  max-width: 100vw;
  backdrop-filter: blur(70px) !important;
}

.main-entityHeader-withBackgroundImage {
  padding: 0 32px 24px;
  margin-top: 48px;
}

.main-entityHeader-title {
  font-size: unset;
  font-weight: 500;
  display: contents;
}

h1,
h2,
h3,
.main-shelf-title,
.main-entityHeader-topbarTitle,
.main-type-canon,
.main-type-bass,
.main-cardHeader-text.main-type-alto,
.x-searchResultsTracks-title {
  font-weight: 500;
  letter-spacing: 0.1px !important;
  margin-bottom: 4px;
  white-space: normal;
}

.main-seeAll-link {
  margin-bottom: 10px;
}

.main-topBar-topbarContent {
  position: absolute;
  display: -webkit-box;
  left: 50%;
  top: 5px;
  transform: translate(-50%, 0%);
  padding: 6px;
}

.queue-tabBar-header {
  text-align: center;
  min-width: 100px;
}

.queue-tabBar-headerItemLink {
  transition: background-color ease-out 167ms;
}

.main-topBar-historyButtons button:nth-child(1) {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_arrow_left_24_filled.svg');
  margin-left: 60px;
  background-color: var(--spice-text) !important;
  padding: 5px;
  width: 24px !important;
  height: 24px !important;
}

.main-topBar-historyButtons button:nth-child(2) {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_arrow_right_24_filled.svg');
  background-color: var(--spice-text) !important;
  padding: 5px;
  width: 24px !important;
  height: 24px !important;
}

.main-userWidget-displayName,
.main-userWidget-chevron {
  display: none !important;
}


/* menus */

.main-contextMenu-menuItemButton,
.main-userWidget-dropDownMenuItemButton {
  border-radius: var(--border-radius-3);
  color: var(--spice-text) !important;
  height: 32px;
  padding-left: 8px;
}
/* ... */

